# vekamp

./: .gitattributes  .gitignore  .launch-debug.bat  CMakeLists.txt  Install.bat  README.md  compile_flags.txt
.github/ISSUE_TEMPLATE/: bug_report.md
VekAmp/: CMakeLists.txt  Main.qml  MiscPrompts.qml  PreLoad.cmake  bassplayer.cpp  bassplayer.hpp  bassuibackend.cpp  bassuibackend.hpp  coverimageprovider.cpp  coverimageprovider.hpp  librarydb.cpp  librarydb.hpp  main.cpp  miscuibackend.cpp  miscuibackend.hpp  resources.qrc  taguibackend.cpp  taguibackend.h  utils.cpp  utils.hpp
VekAmp/.qtcreator/: project.json.qtds
app/: CMakeLists.txt  VekAmp.qmlproject  VekAmp.qmlproject.qtds  VekAmp.qrc  qds.cmake  qtquickcontrols2.conf
app/App/: CMakeLists.txt  bassplayer.cpp  bassplayer.hpp  utils.cpp
app/App/autogen/: environment.h
app/Libs/: CMakeLists.txt
app/Libs/BASS/: CMakeLists.txt
app/VekAmp/: CMakeLists.txt  Constants.qml  qmldir
app/VekAmp/designer/: plugin.metainfo
app/VekAmpContent/: App.qml  CMakeLists.txt  MainPlayer.qml  MainPlayer.qml.DIEvIn
src/: main.cpp  mainwindow.cpp  mainwindow.ui
