
cmake_minimum_required(VERSION 3.21.1)

option(LINK_INSIGHT "Link Qt Insight Tracker library" ON)
option(BUILD_QDS_COMPONENTS "Build design studio components" ON)

project(VekAmpApp LANGUAGES CXX)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(QT_QML_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/qml)
set(QML_IMPORT_PATH ${QT_QML_OUTPUT_DIRECTORY}
    CACHE STRING "Import paths for Qt Creator's code model"
    FORCE
)

find_package(Qt6 6.8 REQUIRED COMPONENTS Core Gui Widgets Qml Quick QuickTimeline ShaderTools)
qt_standard_project_setup()

qt_add_executable(${CMAKE_PROJECT_NAME})
qt_add_resources(${CMAKE_PROJECT_NAME} "configuration"
    PREFIX "/"
    FILES
        qtquickcontrols2.conf)

#add_subdirectory(Libs)
#Link BASS Through root CMakeLists because scoping in cmake is fucking indecipherable to me.
#TODO: Find a way to do this through Libs/Bass/CMakeLists.txt

target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/Libs/Bass/Headers
)

set(BASS_LIB_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Libs/BASS/Libs)

add_library(BASS SHARED IMPORTED)
set_target_properties(BASS PROPERTIES
    IMPORTED_LOCATION ${BASS_LIB_DIR}/bass.dll
    IMPORTED_IMPLIB ${BASS_LIB_DIR}/bass.lib
)

add_library(BASSALAC SHARED IMPORTED)
set_target_properties(BASSALAC PROPERTIES
    IMPORTED_LOCATION ${BASS_LIB_DIR}/bassalac.dll
    IMPORTED_IMPLIB ${BASS_LIB_DIR}/bassalac.lib
)

add_library(BASSAPE SHARED IMPORTED)
set_target_properties(BASSAPE PROPERTIES
    IMPORTED_LOCATION ${BASS_LIB_DIR}/bassape.dll
    IMPORTED_IMPLIB ${BASS_LIB_DIR}/bassape.lib
)

add_library(BASSFLAC SHARED IMPORTED)
set_target_properties(BASSFLAC PROPERTIES
    IMPORTED_LOCATION ${BASS_LIB_DIR}/bassflac.dll
    IMPORTED_IMPLIB ${BASS_LIB_DIR}/bassflac.lib
)

add_library(BASSOPUS SHARED IMPORTED)
set_target_properties(BASSOPUS PROPERTIES
    IMPORTED_LOCATION ${BASS_LIB_DIR}/bassopus.dll
    IMPORTED_IMPLIB ${BASS_LIB_DIR}/bassopus.lib
)

set(BASS_TARGETS
    BASS;
    BASSALAC;
    BASSAPE;
    BASSFLAC;
    BASSOPUS;
)

target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC
    ${BASS_TARGETS}
)

#Resume autogenerated CMakeLists

include(qds)

if (BUILD_QDS_COMPONENTS)
    include(qmlcomponents OPTIONAL)
endif()

if (LINK_INSIGHT)
    include(insight OPTIONAL)
endif ()

include(GNUInstallDirs)
install(TARGETS ${CMAKE_PROJECT_NAME}
  BUNDLE DESTINATION .
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
