
target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/Headers
)

add_library(BASS SHARED IMPORTED)
set_target_properties(BASS PROPERTIES
    IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/Libs/bass.dll
    IMPORTED_IMPLIB ${CMAKE_CURRENT_SOURCE_DIR}/Libs/bass.lib
)

add_library(BASSALAC SHARED IMPORTED)
set_target_properties(BASSALAC PROPERTIES
    IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/Libs/bassalac.dll
    IMPORTED_IMPLIB ${CMAKE_CURRENT_SOURCE_DIR}/Libs/bassalac.lib
)

add_library(BASSAPE SHARED IMPORTED)
set_target_properties(BASSAPE PROPERTIES
    IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/Libs/bassape.dll
    IMPORTED_IMPLIB ${CMAKE_CURRENT_SOURCE_DIR}/Libs/bassape.lib
)

add_library(BASSFLAC SHARED IMPORTED)
set_target_properties(BASSFLAC PROPERTIES
    IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/Libs/bassflac.dll
    IMPORTED_IMPLIB ${CMAKE_CURRENT_SOURCE_DIR}/Libs/bassflac.lib
)

add_library(BASSOPUS SHARED IMPORTED)
set_target_properties(BASSOPUS PROPERTIES
    IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/Libs/bassopus.dll
    IMPORTED_IMPLIB ${CMAKE_CURRENT_SOURCE_DIR}/Libs/bassopus.lib
)

set(BASS_TARGETS
    BASS;
    BASSALAC;
    BASSAPE;
    BASSFLAC;
    BASSOPUS;
)


